update velocity version